<resources>
    <string name="app_name">roslibusiness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perusahaan_rosli">Perusahaan Rosli</string>
    <string name="stok">Stok</string>
    <string name="hasil">Hasil</string>
    <string name="daging">Daging</string>
    <string name="sayuran">Sayuran</string>
    <string name="senarai_barang">Senarai Barang</string>
    <string name="rempah">Rempah</string>
    <string name="bahan_kering">Keringan</string>
    <string name="perkakas">Perkakas</string>

    <string name="belanja">Belanja</string>
    <string name="all">All</string>
    <string name="lain_lain">Lain-lain</string>
    <string name="desc">desc</string>
    <string name="nama">Nama</string>
    <string name="Kategori">Kategori</string>
    <string name="Nama">Nama</string>
    <string name="Harga">Harga</string>
    <string name="harga">Harga</string>
    <string name="Tambah">Tambah</string>
    <string name="Batal">Batal</string>
    <string name="ID">ID</string>
    <string name="Maklumat_Barang">Maklumat Barang</string>
    <string name="Gambar">Gambar</string>
    <string name="Paparan_Hasil">Paparan Hasil</string>
    <string name="PaparanBelanja">Paparan Belanja</string>
    <string name="Buang">buang</string>
    <string name="barcode">Sila Tekan Butang Untuk Imbas Kod Bar</string>
    <string name="Amaun">Amaun</string>
    <string name="tarikh">Tarikh</string>
    <string name="buang">Buang</string>
    <string name="muatTurun">Muat Turun Kod</string>
    <string name="Imbas">Imbas</string>
    <string name="amaun">Amaun</string>
    <string name="batal">Batal</string>
    <string name="tambah_belanja">Tambah Belanja</string>
    <string name="senarai_belanja">Senarai Belanja</string>
    <string name="button_for_expenses">button for expenses</string>
    <string name="tambah_stok">Tambah Stok</string>
    <string name="kategori">Kategori</string>
    <string name="kod_bar_id">Kod Bar ID</string>
    <string name="muat_turun_kod_bar">Muat Turun Kod Bar</string>
    <string name="tambah">Tambah</string>
    <string name="welcome">Perusahaan Rosli</string>
    <string name="barcode_scan">Tekan Untuk Imbas Kod Bar</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="xx">XX</string>
    <string name="amaun_hasil">Amaun Hasil</string>

    <string-array name="kategori">
        <item>Sila Pilih Kategori</item>
        <item>Daging</item>
        <item>Sayuran</item>
        <item>Rempah</item>
        <item>Bahan Kering</item>
        <item>Lain-lain</item>
    </string-array>


</resources>