<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/latar">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="553dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bahagian_paparan"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senaraiBarang"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

            </LinearLayout>


            <ImageView
                android:id="@+id/imageInventory"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_camera" />

            <EditText
                android:id="@+id/inputNamaBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/Nama"
                android:background="@drawable/form_background"
                android:inputType="text" />

            <Spinner
                android:id="@+id/spinKategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/form_background"
                android:contentDescription="@string/Kategori"
                android:entries="@array/kategori" />

            <EditText
                android:id="@+id/inputHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/form_background"
                android:hint="@string/Harga"
                android:inputType="numberDecimal" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">

            </LinearLayout>

            <Button
                android:id="@+id/btnTambahItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/icon_background"
                android:text="@string/Tambah"
                android:textSize="12sp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
